# self-utilities

./: .gitignore  LICENSE  README.md
dict-emo/: Cargo.toml  README.md  emoji-bn.json
dict-emo/src/: main.rs
hello-qt/: CMakeLists.txt  README.md  main.cpp
